Added google form link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="hero-headline">Quietly building something new</h1>
                 <p class="hero-subheading">Three decades of fintech expertise converging with modern technology. Something is coming in Q1 2026.</p>
                 <div class="hero-cta">
-                    <a href="https://forms.google.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Stay in the loop</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCM8sInIqWnoi3NwLqV0uEYrTNjsnR1lcm0pw0_0ht_ylrcQ/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Stay in the loop</a>
                     <a href="#about" class="btn btn-ghost">Learn more</a>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         get in touch.
                     </p>
                     <div class="future-cta">
-                        <a href="https://forms.google.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Get early access</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCM8sInIqWnoi3NwLqV0uEYrTNjsnR1lcm0pw0_0ht_ylrcQ/viewform" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Get early access</a>
                     </div>
                 </div>
             </div>
