--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container hero-container">
             <div class="hero-content">
                 <p class="hero-overline">Chain Brothers</p>
-                <h1 class="hero-headline">Quietly building something new</h1>
+                <h1 class="hero-headline">Building, not talking</h1>
                 <p class="hero-subheading">Three decades of fintech expertise meets modern technology. Something new arrives early 2026.</p>
                 <div class="hero-cta">
                     <a href="#early-access" class="btn btn-primary">Stay in the loop</a>
